@@ -14,7 +14,7 @@ import fi.dy.masa.malilib.util.MessageOutputType;
 import net.minecraft.client.MinecraftClient;
 import net.minecraft.util.Pair;
 import org.kr1v.malilearning.client.MalilearningClient;
-import org.kr1v.malilearning.client.malilib.config.options.ConfigStringMap;
+import org.kr1v.malilearning.client.malilib.config.options.ConfigTable;
 
 import java.io.File;
 import java.lang.reflect.Field;
@@ -69,12 +69,16 @@ public class Configs implements IConfigHandler {
     public static class Lists {
         public static final ConfigStringList STRING_LIST_1 = new ConfigStringList("String list 1", ImmutableList.of("Default values", "go here"), "");
         public static final ConfigStringList STRING_LIST_2 = new ConfigStringList("Another string list", ImmutableList.of(), "This one has a comment!");
-        public static final ConfigStringMap  STRING_MAP_1 = new ConfigStringMap("Custom string map!", ImmutableList.of(new Pair<>("default key", "default value")), "A comment", "", "");
+        public static final ConfigTable STRING_MAP_1 = new ConfigTable("Custom table!", "A comment", "", "", null, List.of(), String.class, String.class);
+        public static final ConfigTable STRING_MAP_2 = new ConfigTable("Custom integer table!", "A comment", "", "", null, List.of(), Integer.class, Integer.class);
+        public static final ConfigTable STRING_MAP_3 = new ConfigTable("Custom string integer double table!", "A comment", "", "", null, List.of(), String.class, Integer.class, Double.class);
 
         public static final List<IConfigBase> OPTIONS = List.of(
                 STRING_LIST_1,
                 STRING_LIST_2,
-                STRING_MAP_1
+                STRING_MAP_1,
+                STRING_MAP_2,
+                STRING_MAP_3
         );
     }
 
